--- a/01-scientific-inquiry.Rmd
+++ b/01-scientific-inquiry.Rmd
@@ -40,5 +40,5 @@ Students should be able to:
 
 ### 3. Intro to field research and scientific inquiry
 
-<iframe src="https://docs.google.com/presentation/d/1J_MQHerLhh3m3X6Nt_omx3b_K_YBR9RpqcHNmxg37pA/embed?start=false&loop=false&delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<iframe src="https://docs.google.com/presentation/d/1J_MQHerLhh3m3X6Nt_omx3b_K_YBR9RpqcHNmxg37pA/embed?start=false&loop=false&delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1"></iframe>
 
