--- a/04-marsh-field-methods.Rmd
+++ b/04-marsh-field-methods.Rmd
@@ -5,7 +5,8 @@ css: style.css
 ---
 ## Housekeeping
 
-* Lab this week is at Point Lookout. The marsh there is much bigger than the one we were in last week, and we might have to walk through some tall grass to get to the marsh. Wear long pants (light, loose-fitting synthetic material is best; avoid jeans and tights). The grass will tear up your legs and the ranger said chiggers are out there too. There's also a small amount of poison ivy.
+* We will meet for lab at the vans next to Physical Plant (by the ARC)
+* Wear long pants (light, loose-fitting synthetic material is best; avoid jeans and tights). The grass will tear up your legs and the ranger said chiggers are out there too. There's also a small amount of poison ivy.
 * Bring waterproof boots (we have extra boots in limited sizes - if you own a pair please bring them). 
 * Be prepared to spend most of the afternoon outside. 
 * Bring your marsh plants species ID guide to take the field ID quiz.
@@ -22,6 +23,19 @@ css: style.css
 
 ## Lesson plan
 
-Go over the details of our marsh sampling methods, as outlined in the slides, so that you're ready to make the measurements in the field today. Make sure to take good notes here because you will have to clearly articulate our research in your marsh lab report. 
+1. We'll first go over the details of our marsh sampling methods, as outlined in the slides, so that you're ready to make the measurements in the field today. Pay close attention because Kylie and I won't be able to help everyone at the same time.
 
 <iframe src="https://docs.google.com/presentation/d/1V8VrXDSoeyJIivLSKPxECJzmMrDmmyq-bhgUY9I1600/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1"></iframe>
+
+2. Pre-lab prep:
+
+**Enter quadrat coordinates into GPS unit**
+
+* Put a piece of labeling tape on your group's GPS unit and label it with your group letter.  
+* Enter your group's GPS coordinates into your GPS unit. Make sure to label each coordinate with the correct quadrat number.
+* Note: For longitude coordinates, -76 is the same thing as W76
+
+**Pre-label three biomass bags and three sediment sample containers**
+
+* Use a sharpie to put the date, "Point Lookout," your group letter, and quadrat number on each of your three biomass bags
+* Use a sharpie to write directly on the sediment sample containers your group letter and quadrat number
