--- a/04-marsh-field-methods.Rmd
+++ b/04-marsh-field-methods.Rmd
@@ -32,7 +32,7 @@ css: style.css
 **Enter quadrat coordinates into GPS unit**
 
 * Put a piece of labeling tape on your group's GPS unit and label it with your group letter.  
-* Enter your group's GPS coordinates into your GPS unit. Make sure to label each coordinate with the correct quadrat number.
+* Enter your group's [GPS coordinates](https://docs.google.com/spreadsheets/d/1mYoGyq-8Y2-RpsXb-zOX1jk5tfSAcb7muXgy5Yux3so/edit?gid=0#gid=0) into your GPS unit. Make sure to label each coordinate with the correct quadrat number.
 * Note: For longitude coordinates, -76 is the same thing as W76
 
 **Pre-label three biomass bags and three sediment sample containers**
