--- a/03-marsh-study-design.Rmd
+++ b/03-marsh-study-design.Rmd
@@ -26,3 +26,6 @@ css: style.css
 Develop draft questions, hypotheses, goals, and objectives for the marsh field study, as outlined in the slides. Make sure to take good notes here because you will need to clearly articulate these in your marsh lab report. 
 
 <iframe src="https://docs.google.com/presentation/d/1NXQgJZzBut3QTaZZ2cHx8jJ7H_w2aJ7Sf5fcoUD1VI8/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1"></iframe>
+
+## Study site
+<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1QLcQVzjpS5U_SPJj7oAzR-V0HePlK8U&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
