--- a/19-hydrologic-field-study-plan.Rmd
+++ b/19-hydrologic-field-study-plan.Rmd
@@ -23,6 +23,7 @@ css: style.css
 ## Resources
 
 * [Standard operating procedures](https://smr-monitoring.github.io/MRNE395-2024FA/sops.html)
+* [Planning worksheets](https://drive.google.com/drive/folders/1lAaWzYoXvyzf02Omr3Z3Fm1-GAfI7BnQ?usp=drive_link)
 
 ## Lesson plan
 
