--- a/21-field-study-planning.Rmd
+++ b/21-field-study-planning.Rmd
@@ -27,7 +27,5 @@ css: style.css
     c. Results should be as specific as possible - text should include NUMBERS - summary statistics.
     d. Use scientific notation/superscripts: g m^-2^ not g/m2.
     e. Species names are italicized. Genus is capitalized: *Spartina alterniflora*
-1. Write an "and but therefore" statement and summary of methods for your group's hydrologic study at the end of your planning doc (available in [this folder](https://drive.google.com/drive/u/0/folders/1lAaWzYoXvyzf02Omr3Z3Fm1-GAfI7BnQ))
+1. Finalize your deployment plan. Modify your plan worksheet, available in the [Hydrologic field study folder](https://drive.google.com/drive/u/0/folders/1lAaWzYoXvyzf02Omr3Z3Fm1-GAfI7BnQ), if necessary. Discuss your study site reconnaissance observations: 1) make sure it is an appropriate site for testing your hypothesis, 2) evaluate the site for potential hazards to your own safety and the safety of the loggers, and 3) note the water depth to ensure that your buoy line is long enough.
 1. Run your deployment plan by Cassie.
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ERB7ITvabA4?si=A9N4HO_-SXSYPKhC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
