--- a/23-univariate-analysis.Rmd
+++ b/23-univariate-analysis.Rmd
@@ -5,19 +5,10 @@ css: style.css
 ---
 ## Housekeeping
 
-* Quiz next Thursday on learning objectives from today and next Tuesday
+* Quiz next Thursday: Be able to articulate your hydrologic field study data analysis methods and how they will enable you to test your hypotheses
 * Lab today: meet in SH 112, then retrieve loggers. Be prepared to go outside in whatever conditions your loggers are deployed in.
 * Another EC opportunity: Saturday, November 9 from 1 pm to 4 pm spat counting with SMRWA. Please let Emma Green know if you can make it via email (emmasmrwa@gmail.com) or signing up via the [sign-up genius](https://www.signupgenius.com/go/10C0944A5AC2FA5F9C16-52918137-counting)
 
-## Learning objectives
-
-* Define *t-test* and *ANOVA*
-* For a given dataset, determine an appropriate statistical test for comparing population means (t-test or ANOVA)
-* Formulate a null and alternative hypothesis for a t-test and/or ANOVA
-* Define and calculate species richness, Shannon's H, and Simpson's D metrics of biodiversity
-* Explain the role of before/after and control/impact treatments in a BACI experiment
-* Design a BACI experiment for a given research question
-* Interpret the results of a BACI experiment
 
 ## Resources
 
@@ -29,5 +20,4 @@ css: style.css
 
 1. Quiz
 1. Sign up for poster groups in [this spreadsheet](https://docs.google.com/spreadsheets/d/1BgDhoONcbGGGXkjJAlRhcocOCIhK9FUYvEODWMZDmXY/edit?usp=sharing). You don't need to have a title yet but it would be good to start thinking about which project you want to use.
-1. Slides:
-<iframe src="https://docs.google.com/presentation/d/1jiKVCHhvZRjtESpoUCwc7PMipsYj-G5Nrq1BG2p6GUg/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1"></iframe>
+1. *Chasing Coral*: I was going to cover some other ancillary data stuff, but today feels like a good time to instead take a step back and think about why studying marine science is important and why we need people who can do robust field-based marine science research.
