--- a/27-group-work-session.Rmd
+++ b/27-group-work-session.Rmd
@@ -19,3 +19,12 @@ css: style.css
 ## Lesson plan
 
 Work on posters!
+
+##Note about superscripts##
+
+In your plot axis labels, it's important that you format superscripts correctly. For example, "mysids/m2" looks sloppy, lazy, or like you don't know what you're doing. The correct format is mysids m⁻². Excel and Google Sheets don't make it easy to create properly formatted labels with superscripts. Here is a workaround for adding superscripts:
+
+* Go to this [superscript generator](https://lingojam.com/SuperscriptGenerator) website
+* Type in the superscript you want to generate (e.g., -2)
+* Copy the superscript generated (e.g., ⁻²)
+* Paste it into your chart axis label (e.g., mysids m⁻²)
